--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -2,5 +2,9 @@ spring:
   h2:
     console:
       enabled: true
-server:
-  port: 8070
+  jpa:
+    defer-datasource-initialization: true
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
